// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SignUpForm matches the snapshot 1`] = `
<Form
  as="form"
  onChange={[Function]}
  onSubmit={[Function]}
>
  <FormGroup
    widths="equal"
  >
    <FormField
      error={false}
    >
      <label
        htmlFor="sign-up-username"
      >
        Username
      </label>
      <input
        id="sign-up-username"
        onBlur={[Function]}
        onChange={[Function]}
        placeholder="Username"
      />
    </FormField>
    <FormField
      error={false}
    >
      <label
        htmlFor="sign-up-email"
      >
        Email
      </label>
      <input
        id="sign-up-email"
        onBlur={[Function]}
        onChange={[Function]}
        placeholder="Email"
      />
    </FormField>
  </FormGroup>
  <FormGroup
    widths="equal"
  >
    <FormField
      error={false}
    >
      <label
        htmlFor="sign-up-password"
      >
        Password
      </label>
      <input
        id="sign-up-password"
        onBlur={[Function]}
        onChange={[Function]}
        placeholder="Password"
        type="password"
      />
      <PasswordStrengthBar
        score={0}
      />
    </FormField>
    <FormField
      error={false}
    >
      <label
        htmlFor="sign-up-password-confirm"
      >
        Confirm Password
      </label>
      <input
        id="sign-up-password-confirm"
        onBlur={[Function]}
        onChange={[Function]}
        placeholder="Confirm Password"
        type="password"
      />
    </FormField>
  </FormGroup>
  <Button
    as="button"
    basic={true}
    content="Create account"
    floated="right"
    icon="add user"
    secondary={true}
    type="submit"
  />
</Form>
`;

exports[`SignUpForm onSubmit error matches the snapshot 1`] = `
<SignUpForm
  enableCaptcha={false}
  onError={[Function]}
  onSubmit={[Function]}
  validations={
    Object {
      "email": Array [
        "is invalid",
      ],
      "password": Array [
        "is invalid",
      ],
      "passwordConfirm": Array [
        "is invalid",
      ],
      "username": Array [
        "is invalid",
        "is too short",
      ],
    }
  }
>
  <Form
    as="form"
    onChange={[Function]}
    onSubmit={[Function]}
  >
    <form
      className="ui form"
      onChange={[Function]}
      onSubmit={[Function]}
    >
      <FormGroup
        widths="equal"
      >
        <div
          className="equal width fields"
        >
          <FormField
            error={true}
          >
            <div
              className="error field"
            >
              <label
                htmlFor="sign-up-username"
              >
                Username
              </label>
              <input
                id="sign-up-username"
                onBlur={[Function]}
                onChange={[Function]}
                placeholder="Username"
              />
              <Label
                color="red"
                pointing={true}
              >
                <div
                  className="ui red pointing label"
                  onClick={[Function]}
                >
                  <div>
                    Username is invalid
                  </div>
                  <div>
                    Username is too short
                  </div>
                </div>
              </Label>
            </div>
          </FormField>
          <FormField
            error={true}
          >
            <div
              className="error field"
            >
              <label
                htmlFor="sign-up-email"
              >
                Email
              </label>
              <input
                id="sign-up-email"
                onBlur={[Function]}
                onChange={[Function]}
                placeholder="Email"
              />
              <Label
                color="red"
                pointing={true}
              >
                <div
                  className="ui red pointing label"
                  onClick={[Function]}
                >
                  <div>
                    Email is invalid
                  </div>
                </div>
              </Label>
            </div>
          </FormField>
        </div>
      </FormGroup>
      <FormGroup
        widths="equal"
      >
        <div
          className="equal width fields"
        >
          <FormField
            error={true}
          >
            <div
              className="error field"
            >
              <label
                htmlFor="sign-up-password"
              >
                Password
              </label>
              <input
                id="sign-up-password"
                onBlur={[Function]}
                onChange={[Function]}
                placeholder="Password"
                type="password"
              />
              <PasswordStrengthBar
                score={0}
              >
                <Progress
                  attached="bottom"
                  color="red"
                  percent={0}
                  style={
                    Object {
                      "marginTop": -3,
                    }
                  }
                  title="Password strength: Very weak"
                >
                  <div
                    className="ui red bottom attached progress"
                    data-percent={0}
                    style={
                      Object {
                        "marginTop": -3,
                      }
                    }
                    title="Password strength: Very weak"
                  >
                    <div
                      className="bar"
                      style={
                        Object {
                          "width": "0%",
                        }
                      }
                    />
                  </div>
                </Progress>
              </PasswordStrengthBar>
              <Label
                color="red"
                pointing={true}
              >
                <div
                  className="ui red pointing label"
                  onClick={[Function]}
                >
                  <div>
                    Password is invalid
                  </div>
                </div>
              </Label>
            </div>
          </FormField>
          <FormField
            error={true}
          >
            <div
              className="error field"
            >
              <label
                htmlFor="sign-up-password-confirm"
              >
                Confirm Password
              </label>
              <input
                id="sign-up-password-confirm"
                onBlur={[Function]}
                onChange={[Function]}
                placeholder="Confirm Password"
                type="password"
              />
              <Label
                color="red"
                pointing={true}
              >
                <div
                  className="ui red pointing label"
                  onClick={[Function]}
                >
                  <div>
                    PasswordConfirm is invalid
                  </div>
                </div>
              </Label>
            </div>
          </FormField>
        </div>
      </FormGroup>
      <Button
        as="button"
        basic={true}
        content="Create account"
        floated="right"
        icon="add user"
        secondary={true}
        type="submit"
      >
        <button
          className="ui basic secondary right floated button"
          onClick={[Function]}
          role="button"
          type="submit"
        >
          <Icon
            as="i"
            name="add user"
          >
            <i
              aria-hidden="true"
              className="add user icon"
            />
          </Icon>
          Create account
        </button>
      </Button>
    </form>
  </Form>
</SignUpForm>
`;
